feat: add Expanded Delight and Display Delight mods

--- a/curseforge-pack/manifest.json
+++ b/curseforge-pack/manifest.json
@@ -192,12 +192,17 @@
     },
     {
       "projectID": 245506,
-      "fileID": 6640484,
+      "fileID": 6654076,
       "required": true
     },
     {
       "projectID": 403422,
       "fileID": 6466239,
+      "required": true
+    },
+    {
+      "projectID": 620770,
+      "fileID": 6125094,
       "required": true
     },
     {
@@ -313,6 +318,11 @@
     {
       "projectID": 225608,
       "fileID": 5830452,
+      "required": true
+    },
+    {
+      "projectID": 1144296,
+      "fileID": 6638384,
       "required": true
     },
     {
@@ -436,8 +446,8 @@
       "required": true
     },
     {
-      "projectID": 289310,
-      "fileID": 6480232,
+      "projectID": 349559,
+      "fileID": 6585010,
       "required": true
     },
     {
@@ -446,8 +456,8 @@
       "required": true
     },
     {
-      "projectID": 349559,
-      "fileID": 6585010,
+      "projectID": 289310,
+      "fileID": 6480232,
       "required": true
     },
     {
@@ -496,13 +506,13 @@
       "required": true
     },
     {
-      "projectID": 463155,
-      "fileID": 6240977,
+      "projectID": 619320,
+      "fileID": 6596945,
       "required": true
     },
     {
-      "projectID": 619320,
-      "fileID": 6596945,
+      "projectID": 463155,
+      "fileID": 6240977,
       "required": true
     },
     {
