feat: update mods to latest version and add new mods
- Stock Market (by KROIA)
- Easy NPC: Config UI (by Kaworru)
- Security Craft (by Geforce132)
- Architectury API (by shedaniel)
- Easy NPC (by Kaworru)
- BankSystem (by KROIA)

--- a/curseforge-pack/manifest.json
+++ b/curseforge-pack/manifest.json
@@ -26,6 +26,11 @@
       "required": true
     },
     {
+      "projectID": 1158647,
+      "fileID": 6200720,
+      "required": true
+    },
+    {
       "projectID": 570073,
       "fileID": 5973188,
       "required": true
@@ -92,7 +97,7 @@
     },
     {
       "projectID": 973620,
-      "fileID": 6615598,
+      "fileID": 6668101,
       "required": true
     },
     {
@@ -127,7 +132,7 @@
     },
     {
       "projectID": 324717,
-      "fileID": 6291517,
+      "fileID": 6667790,
       "required": true
     },
     {
@@ -142,7 +147,7 @@
     },
     {
       "projectID": 228525,
-      "fileID": 6618780,
+      "fileID": 6659840,
       "required": true
     },
     {
@@ -192,7 +197,7 @@
     },
     {
       "projectID": 245506,
-      "fileID": 6654076,
+      "fileID": 6665999,
       "required": true
     },
     {
@@ -257,7 +262,7 @@
     },
     {
       "projectID": 455508,
-      "fileID": 6213632,
+      "fileID": 6661598,
       "required": true
     },
     {
@@ -273,6 +278,16 @@
     {
       "projectID": 627557,
       "fileID": 6515577,
+      "required": true
+    },
+    {
+      "projectID": 1214728,
+      "fileID": 6452643,
+      "required": true
+    },
+    {
+      "projectID": 64760,
+      "fileID": 6485073,
       "required": true
     },
     {
@@ -303,6 +318,16 @@
     {
       "projectID": 834607,
       "fileID": 6386190,
+      "required": true
+    },
+    {
+      "projectID": 419699,
+      "fileID": 5786327,
+      "required": true
+    },
+    {
+      "projectID": 559312,
+      "fileID": 6452640,
       "required": true
     },
     {
@@ -381,13 +406,18 @@
       "required": true
     },
     {
+      "projectID": 1175370,
+      "fileID": 6200607,
+      "required": true
+    },
+    {
       "projectID": 522992,
       "fileID": 6646615,
       "required": true
     },
     {
       "projectID": 388172,
-      "fileID": 6304958,
+      "fileID": 6659026,
       "required": true
     },
     {
@@ -427,7 +457,7 @@
     },
     {
       "projectID": 257814,
-      "fileID": 6550281,
+      "fileID": 6661020,
       "required": true
     },
     {
@@ -446,8 +476,8 @@
       "required": true
     },
     {
-      "projectID": 349559,
-      "fileID": 6585010,
+      "projectID": 289310,
+      "fileID": 6480232,
       "required": true
     },
     {
@@ -456,8 +486,8 @@
       "required": true
     },
     {
-      "projectID": 289310,
-      "fileID": 6480232,
+      "projectID": 349559,
+      "fileID": 6658600,
       "required": true
     },
     {
@@ -506,13 +536,13 @@
       "required": true
     },
     {
-      "projectID": 619320,
-      "fileID": 6596945,
+      "projectID": 463155,
+      "fileID": 6240977,
       "required": true
     },
     {
-      "projectID": 463155,
-      "fileID": 6240977,
+      "projectID": 619320,
+      "fileID": 6596945,
       "required": true
     },
     {
