--- a/packwiz/modrinth/mods/structurize.pw.toml
+++ b/packwiz/modrinth/mods/structurize.pw.toml
@@ -1,13 +1,13 @@
 name = "Structurize"
-filename = "structurize-1.0.793-1.21.1-snapshot.jar"
+filename = "structurize-1.0.793-1.21.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "39da40c5a5e04f3c2d5e49b023b25811c1045c2d"
+hash = "0915b4a988b3845a1ea448beab6a6b8090d2310f"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 7207206
+file-id = 7214034
 project-id = 298744
