chore(workflows): add semantic-release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,66 +1,45 @@
-name: Build and Release Modpack
+name: Release
 
 on:
   push:
     branches:
       - main
-    tags:
-      - 'v*'
+      - beta
 
 jobs:
   build:
+    uses: ./.github/workflows/build.yml
+
+  release:
+    needs: build
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/dalbitresb12/packwiz:2025-11-02
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Prepare build folders
-        run: mkdir -p build/curseforge build/modrinth
-
-      - name: Define build version
-        id: vars
-        run: |
-          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
-            echo "VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          else
-            SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
-            echo "VERSION=main-${SHORT_SHA}" >> $GITHUB_ENV
-          fi
-
-      # --- CurseForge ---
-      - name: Build CurseForge Server pack
-        working-directory: packwiz/curseforge
-        run: |
-          packwiz curseforge export \
-            --output ../../build/curseforge/MouCraft-curseforge-server-${VERSION}.zip \
-            --side server
-
-      - name: Build CurseForge Client pack
-        working-directory: packwiz/curseforge
-        run: |
-          packwiz curseforge export \
-            --output ../../build/curseforge/MouCraft-curseforge-client-${VERSION}.zip \
-            --side client
-
-      # --- Modrinth ---
-      - name: Build Modrinth pack
-        working-directory: packwiz/modrinth
-        run: |
-          packwiz modrinth export \
-            --output ../../build/modrinth/MouCraft-modrinth-${VERSION}.mrpack
-
-      # --- GitHub Release ---
-      - name: Create or update GitHub Release
-        uses: softprops/action-gh-release@v2
+      - name: Checkout
+        uses: actions/checkout@v5
         with:
-          tag_name: ${{ env.VERSION }}
-          name: "MouCraft ${{ env.VERSION }}"
-          draft: false
-          prerelease: ${{ github.ref_type != 'tag' }}
-          files: |
-            build/curseforge/MouCraft-curseforge-client-${{ env.VERSION }}.zip
-            build/curseforge/MouCraft-curseforge-server-${{ env.VERSION }}.zip
-            build/modrinth/MouCraft-modrinth-${{ env.VERSION }}.mrpack
+          fetch-depth: 0
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v6
+        with:
+          name: build-pack
+          path: build/
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+        run: |
+          npx --yes \
+            --package semantic-release \
+            --package @semantic-release/changelog \
+            --package @semantic-release/git \
+            --package @semantic-release/commit-analyzer \
+            --package @semantic-release/exec \
+            --package conventional-changelog-conventionalcommits \
+            semantic-release
