--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,14 +29,23 @@ jobs:
             | jq -r '.[] | select(.name | endswith(".mrpack")) | .browser_download_url')
           echo "ASSET_URL=$ASSET_URL" >> $GITHUB_ENV
 
+      - name: Get CurseForge client asset URL
+        id: get_curseforge_asset
+        run: |
+          ASSET_URL=$(echo '${{ toJson(github.event.release.assets) }}' \
+            | jq -r '.[] | select(.name | test("client.*\\.zip$")) | .browser_download_url')
+          echo "CURSEFORGE_ASSET_URL=$ASSET_URL" >> $GITHUB_ENV
+
       - name: Publish Modrinth pack
-        uses: cloudnode-pro/modrinth-publish@v2
+        uses: Kir-Antipov/mc-publish@v3.3
         with:
-          token: ${{ secrets.MODRINTH_TOKEN }}
-          project: SYLaBkiA
-          name: ${{ github.event.release.name }}
-          version: ${{ github.event.release.tag_name }}
-          changelog: ${{ github.event.release.body }}
-          loaders: 'neoforge'
-          game-versions: '1.21.1'
+          modrinth-id: SYLaBkiA
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
           files: ${{ env.ASSET_URL }}
+
+      - name: Publish CurseForge pack
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+          curseforge-id: 1283043
+          curseforge-token: ${{ secrets.CF_TOKEN }}
+          files: ${{ env.CURSEFORGE_ASSET_URL }}
