--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,7 +52,7 @@ jobs:
           loaders: neoforge
           name: ${{ github.event.release.name }}
           version: ${{ github.event.release.tag_name }}
-          game-version-filter: 1.21.1
+          game-versions: 1.21.1
           files: MouCraft-modrinth-*.mrpack
 
       - name: Publish CurseForge pack
