--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,11 +47,11 @@ jobs:
       - name: Publish Modrinth pack
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          modrinth-id: SYLaBkiA
-          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          modrinth-id: 'SYLaBkiA'
+          modrinth-token: "${{ secrets.MODRINTH_TOKEN }}"
           loaders: neoforge
-          name: ${{ github.event.release.name }}
-          version: ${{ github.event.release.tag_name }}
+          name: "${{ github.event.release.name }}"
+          version: "${{ github.event.release.tag_name }}"
           game-versions: 1.21.1
           files: MouCraft-modrinth-*.mrpack
 
@@ -59,9 +59,9 @@ jobs:
         uses: Kir-Antipov/mc-publish@v3.3
         with:
           curseforge-id: 1283043
-          curseforge-token: ${{ secrets.CF_TOKEN }}
+          curseforge-token: "${{ secrets.CURSEFORGE_TOKEN }}"
           loaders: neoforge
-          name: ${{ github.event.release.name }}
-          version: ${{ github.event.release.tag_name }}
+          name: "${{ github.event.release.name }}"
+          version: "${{ github.event.release.tag_name }}"
           game-versions: 1.21.1
           files: MouCraft-curseforge-client-*.zip
