--- a/packwiz/curseforge/pack.toml
+++ b/packwiz/curseforge/pack.toml
@@ -1,6 +1,6 @@
 name = "MouCraft"
 author = "416C6578"
-version = "0.5.0-beta1"
+version = "0.6.0"
 description = "MouCraft is a survival-RP modpack for Minecraft 1.21.1 using NeoForge."
 pack-format = "packwiz:1.1.0"
 
